--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 node_modules/
 /node_modules/
 
+.next
+
 # Packages #
 ############
 *.7z
@@ -75,4 +77,3 @@ assets/img/.DS_Store
 package-lock.json
 yarn.lock
 settings.dat
-
