📦 NEW: styled component

--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
 		"next": "11.1.2",
 		"next-pwa": "^5.3.1",
 		"react": "17.0.2",
-		"react-dom": "17.0.2"
+		"react-dom": "17.0.2",
+		"styled-components": "^5.3.1"
 	},
 	"devDependencies": {
+		"babel-plugin-styled-components": "^1.13.2",
 		"eslint": "7.32.0",
 		"eslint-config-next": "11.1.2",
 		"prettier": "^2.3.2"
