--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
 		"next": "11.1.2",
 		"next-pwa": "^5.3.1",
 		"react": "17.0.2",
+		"react-content-loader": "^6.0.3",
 		"react-dom": "17.0.2",
-		"styled-components": "^5.3.1"
+		"styled-components": "^5.3.1",
+		"swr": "^1.0.0"
 	},
 	"devDependencies": {
 		"babel-plugin-styled-components": "^1.13.2",
